Fixing LibraryItem polymorphism
